--- a/Project.toml
+++ b/Project.toml
@@ -2,10 +2,21 @@ name = "CIAOAlgorithms"
 uuid = "44c1da8e-ad92-11ea-0c62-8351ccf0aad4"
 authors = ["puya <p.latafat@gmail.com>"]
 version = "0.1.0"
- 
+
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProximalAlgorithms = "140ffc9f-1907-541a-a177-7475e0a401e9"
 ProximalOperators = "a725b495-10eb-56fe-b38b-717eba820537"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+
+[compat]
+ProximalOperators = "< 1.0.0"
+julia = "1.0.0"
+
+[extras]
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Random", "Test"]
