--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ ProximalOperators = "a725b495-10eb-56fe-b38b-717eba820537"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
+ProximalAlgorithms = "< 1.0.0"
 ProximalOperators = "< 1.0.0"
 julia = "1.0.0"
 
