updated compacts, readme

--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,8 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-ProximalAlgorithms = "< 1.0.0"
-ProximalOperators = "< 1.0.0"
+ProximalAlgorithms = "<= 0.4.0"
+ProximalOperators = "0.14"
 julia = "1.0.0"
 
 [extras]
